--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,15 +1,37 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
 import {getCollection} from 'astro:content'
 const airdrops=await getCollection('airdrops');
-airdrops[0].slug
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Airdrops">
 	<main>
-		<h1 class="text-center text-7xl font-extrabold"><span class="block">Airdrops</span></h1>
+		<h1 class="text-center text-7xl font-extrabold mb-24"><span class="block">Airdrops</span></h1>
 	</main>
+	<section aria-label="Airdrops dispobiles">
+		<div class="px-4 mx-auto max-w-screen-xl">
+			<div class="grid gap-6 md:grid-cols-2">
+				{
+					airdrops.map((airdrop) => {
+						const {slug,data}=airdrop
+						const {title,img,link,tge}=data;
+						return(
+							<article class="flex">
+								<a href={link} class="mb-2 xl:mb0 transition hover:scale-110">
+								<img  src={`/img/${img}`} alt="" class="rounded-lg mr-5 w-48">
+							</a>
+							<div class="flex flex-col justify-center">
+								<h3 class="mb-2 text-2xl font-bold leading-tight text-white">{title}</h3>
+								<span class="text-xs"> TGE: {tge}</span>
+							</div>
+							</article>
+						)
+					})
+				}
+			</div>
+		</div>
+
+	</section>
 </Layout>
 
 <style>
