--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from '../layouts/Layout.astro';
+import { Image } from 'astro:assets';
 import {getCollection} from 'astro:content'
 const airdrops=await getCollection('airdrops');
 ---
@@ -17,10 +18,12 @@ const airdrops=await getCollection('airdrops');
 						const {title,img,link,tge}=data;
 						return(
 							<article class="flex">
-								<a href={link} class="mb-2 xl:mb0 transition hover:scale-110">
-								<img  src={`/img/${img}`} alt="" class="rounded-lg mr-5 w-48">
+								<a href={link} class="mb-2 xl:mb-0 transition-transform transform hover:scale-110 inline-block">
+								<Image src={/img/+img} alt="A bird." width="250" height="250" decoding="async"
+  loading="lazy"/>
+								
 							</a>
-							<div class="flex flex-col justify-center">
+							<div class="flex flex-col justify-center ml-5">
 								<h3 class="mb-2 text-2xl font-bold leading-tight text-white">{title}</h3>
 								<span class="text-xs"> TGE: {tge}</span>
 							</div>
