--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import Layout from '../layouts/Layout.astro';
 import { Image } from 'astro:assets';
 import {getCollection} from 'astro:content'
 const airdrops=await getCollection('airdrops');
+airdrops.sort((a, b) => (a.data.tge > b.data.tge) ? 1 : -1)
 ---
 
 <Layout title="Airdrops">
@@ -19,8 +20,7 @@ const airdrops=await getCollection('airdrops');
 						return(
 							<article class="flex">
 								<a href={link} class="mb-2 xl:mb-0 transition-transform transform hover:scale-110 inline-block">
-								<Image src={/img/+img} alt="A bird." width="250" height="250" decoding="async"
-  loading="lazy"/>
+								<Image src={/img/+img} alt="A bird." width="250" height="250" decoding="async"  loading="lazy"/>
 								
 							</a>
 							<div class="flex flex-col justify-center ml-5">
@@ -38,5 +38,7 @@ const airdrops=await getCollection('airdrops');
 </Layout>
 
 <style>
-	
+	 img {
+    border-radius: 0.75rem;
+  }
 </style>
